--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_two_columns">2 колонки</string>
     <string name="action_three_columns">3 колонки</string>
     <string name="action_thirty_columns">30 колонок</string>
+    <string name="action_random_columns">Разные стили</string>
 </resources>
