--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">Yamblz</string>
     <string name="content">Hello</string>
-    <string name="action_two_columns">2 колонки</string>
+    <string name="action_one_column">1 колонка</string>
     <string name="action_three_columns">3 колонки</string>
     <string name="action_thirty_columns">30 колонок</string>
-    <string name="action_random_columns">Разные стили</string>
 </resources>
